--- a/data-architect.html
+++ b/data-architect.html
@@ -177,7 +177,7 @@ dig?...</p>
 <p><span class="badge badge-light">London London London</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/CompuGainSolutions/743999698235114-business-intelligence-data-architect'>CompuGain Solutions Business Intelligence Data Architect | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CompuGainSolutions/743999698235114-business-intelligence-data-architect'>CompuGain Solutions Business Intelligence Data Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Orlando, FL, USA</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -422,7 +422,7 @@ our Federal Client's business in defining requirements to support machine?...</p
 <p><span class="badge badge-light">Temple Terrace, FLTemple Terrace, FL</span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qBFaVfw5&k=Job&j=oarGafwb&__jvst=Employee&__jvsd=sx69Wiwv&__jvsc=Twitter&bid=n3auaMw8'>GroupM North America Careers - Data Architect, Data &amp; Services</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qBFaVfw5&k=Job&j=oarGafwb&__jvst=Employee&__jvsd=sx69Wiwv&__jvsc=Twitter&bid=n3auaMw8'>GroupM North America Careers - Data Architect, Data &amp; Services</a></h5> 
 <p><span class="badge badge-light">North America New York, New York  North America</span></p>
 <p>Posted on:: 2019-10-15</p>
 <hr/>
@@ -474,7 +474,7 @@ our Federal Client's business in defining requirements to support machine?...</p
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/aarete/job/oPgx6fws'>AArete Careers - Data Architecture Consultant</a></h5> 
+<h5><a href='http://jobs.jobvite.com/aarete/job/oPgx6fws'>AArete Careers - Data Architecture Consultant</a></h5> 
 <p><span class="badge badge-light">Chicago, Illinois</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
